# multi-pwsh

./: .gitignore  AGENTS.md  Cargo.toml  README.md  global.json
.github/workflows/: ci.yml  release.yml  scoped-install-smoke.yml  smoke-tests.yml
crates/multi-pwsh/: Cargo.toml  build.rs
crates/multi-pwsh/src/: aliases.rs  error.rs  install.rs  layout.rs  main.rs  package.rs  platform.rs  release.rs  versions.rs
crates/multi-pwsh/tests/: cli_args.rs
crates/pwsh-host/: Cargo.toml  build.rs
crates/pwsh-host-cli/: Cargo.toml  build.rs
crates/pwsh-host-cli/src/: main.rs  named_pipe_command.rs
crates/pwsh-host-cli/tests/: named_pipe_command.rs  shim_equivalence.rs  startup_hook_module_path.rs
dotnet/: Bindings.Generated.cs  Bindings.cs  Bindings.csproj  Managed.Common.props
dotnet/bindings/: Bindings.Generated.cs  Bindings.cs  Devolutions.PowerShell.Bindings.csproj  Devolutions.PowerShell.SDK.Bindings.csproj
dotnet/startup-hook/: Devolutions.PowerShell.SDK.StartupHook.csproj  PwshModulePathStartupHook.csproj  (+8 more)
scripts/: Bump-CrateVersions.ps1  Demo-DoctorRepairAliases.ps1  Demo-PrereleaseInstall.ps1  Discover-Bindings.ps1  Generate-Bindings.ps1  Install-LocalMultiPwsh.ps1  Invoke-VenvCmdletMatrix.ps1  Start-NamedPipeTextServer.ps1  bindings.ps74.contract.json
src/: cli_xml.rs  context.rs  delegate_loader.rs  error.rs  host_detect.rs  hostfxr.rs  loader.rs  tests.rs  time.rs
tests/: Invoke-ScopedInstallSmokeTest.ps1  Invoke-VenvTestMatrix.ps1
tools/: install-multi-pwsh.ps1  install-multi-pwsh.sh  uninstall-multi-pwsh.ps1  uninstall-multi-pwsh.sh
(+27 files in other folders)
